@@ -7,7 +7,7 @@ namespace BolandWerbung\BwBackendsite\Controller;
 /***************************************************************
  *  Copyright notice
  *
- *  (c) 2019 Mark Boland <mark.boland@boland.de>, Boland Werbung
+ *  (c) 2019, 2021 Mark Boland <mark.boland@boland.de>
  *  
  *  All rights reserved
  *
@@ -16,7 +16,7 @@ namespace BolandWerbung\BwBackendsite\Controller;
 
 class Module3Controller extends \TYPO3\CMS\Extbase\Mvc\Controller\ActionController {
 		
-	public function listAction() {
+	public function indexAction() {
 		$this->extconf = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance(\TYPO3\CMS\Core\Configuration\ExtensionConfiguration::class)->get('bw_backendsite');
 		$this->prefix = dirname(dirname($_SERVER['PHP_SELF']));	// ../typo3
 		
@@ -29,24 +29,21 @@ class Module3Controller extends \TYPO3\CMS\Extbase\Mvc\Controller\ActionControll
 			$id = $id?intval($id):1;
 			// Access check!
 			// The page will show only if there is a valid page and if this page may be viewed by the user
-			//$this->pageinfo = t3lib_BEfunc::readPageAccess($this->id, $this->perms_clause);
 			$this->pageinfo = \TYPO3\CMS\Backend\Utility\BackendUtility::readPageAccess(intval($id), $this->perms->clause);
 			$access = is_array($this->pageinfo);
 			if ($access || $this->backendUser->user['admin']) {
-				header('Location: '.($this->prefix !== '/'?$this->prefix:'').'/index.php?id='.$id);
-				exit;
+                $url = ($this->prefix !== '/'?$this->prefix:'').'/index.php?id='.$id;
 			} else {
 				$this->content = 'You have no access to the preconfigured page. Please contact the administrator.';
 			}
 		} elseif (preg_match('/^https?:\/\//', $id)) {
 			$this->content = 'valid website url:'.$id;
-			header('Location: '.$id);
-			exit;
+            $url = $id;
 		} else {
 			$this->content = 'The preconfigured page is not a valid web address. Please contact the administrator.';
 		}
 		
 		$this->view->assign('error', $this->content);
-		$this->view->assign('id', $id);
+		$this->view->assign('url', $url);
 	}
 }
