@@ -1,4 +1,4 @@
-﻿==================
+==================
 Developer Corner
 ==================
 
@@ -16,3 +16,18 @@ Hooks
 
 There are no hooks. Simply not enough code to add some.
 
+
+
+Changes
+=======
+
+Version 1.2.0
+-------------
+
+In version 1.2.0 the rendering was changed to use Fluid templates. This enables
+the extension to render the iFrame element by itself. This leaves a small border 
+around the content colored by the TYPO3 backend style sheet. You may have to 
+either chnage the default background color of TYPO3 or your backend pages 
+template to adjust to this.
+
+The default action for the modules were changed to 'Index' rather than 'List'.
