@@ -1,0 +1,8 @@
+<html
+    xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+    data-namespace-typo3-fluid="true">
+    
+    <f:render section="headline"/>
+    <f:render section="content"/>
+    
+</html>
