@@ -1,0 +1,14 @@
+<html
+    xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+    data-namespace-typo3-fluid="true">
+    
+    <f:layout name="backend"/>
+    
+    <f:section name="headline">
+    </f:section>
+    
+    <f:section name="content">
+        <iframe src="{url}" width="100%" height="100%" border="none" bordercolor="transparent" style="border:none;"/>
+    </f:section>
+    
+</html>
