@@ -1,19 +1,0 @@
-<!DOCTYPE html>
-
-<html>
-	<head>
-		<title>Configuration error</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-		<h1>Configuration error</h1>
-		<p>{content}</p>
-		<h2>ID was</h2>
-		<p>{id}</p>
-		<p>Set the start page of your Backend pages either with the extension 
-			configuration or with UserTS (may even cascade through user groups).</p>
-		<p>Invoked by module "{module}"</p>
-	<f:debug>{mods}</f:debug>
-	</body>
-</html>
