@@ -3,7 +3,7 @@
     "description": "TYPO3 Backend pages",
     "type": "typo3-cms-extension",
 	"homepage": "https://github.com/bomeyer/bw_backendsite",
-    "version": "1.1.2",
+    "version": "1.1.3",
 	"license": "GPL-3.0-or-later",
     "support": {
         "issues": "https://github.com/bomeyer/bw_backendsite/issues"
@@ -22,5 +22,10 @@
 		"psr-4": {
 			"BolandWerbung\\BwBackendsite\\": "Classes/"
 		}
-	}
+	},
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "bw_backendsite"
+        }
+    }
 }
