@@ -28,7 +28,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '1.1.2',
+	'version' => '1.1.3',
 	'constraints' => array(
 		'depends' => array(
 			'typo3' => '9.5.0-9.5.99'
